# fantasy_tools

./: .gitignore  PLAN.md  README.md  config.toml  main.py  pyproject.toml
analysis/: 2026-02-14-playoff-analysis-v2.md  2026-02-14-playoff-analysis.md  2026-02-16-p15-streaming-pickups.md  2026-02-18-p15-wednesday-update.md  2026-02-20-p15-daily-update.md
data/: a10_all_games.json  a10_all_games_meta.json  a10_boxscores_raw.json  a10_players.csv  a10_players.json  a10_schedule.json  a10_standings.json  a10_team_ids.json  a10_team_stats.json  fantrax_all_matchups.json  fantrax_free_agents.json  fantrax_rosters.json  fantrax_standings.json  validation_report.json
notebooks/: lineup_optimizer.py  matchup_analyzer.py  player_rankings.py  recency_analysis.py  roster_analyzer.py  waiver_optimizer.py
notebooks/__marimo__/session/: player_rankings.py.json  roster_analyzer.py.json  waiver_optimizer.py.json
src/: boxscore_collector.py  collect_data.py  config.py  fantasy_math.py  fantrax_client.py  ncaa_client.py  schedule_scanner.py  validation.py
src/tui/: app.py
src/tui/screens/: base.py  data_refresh.py  help.py  lineup.py  matchup.py  rankings.py  roster.py  waiver.py
src/tui/styles/: app.tcss
tests/: test_boxscore_collector.py  test_fantasy_math.py  test_fantrax_client.py  test_ncaa_client.py  test_schedule_scanner.py  test_validation.py
tests/test_tui/: test_app.py  test_collect_data_log.py  test_config.py  test_data_refresh.py  test_lineup.py  test_matchup.py  test_phase4.py  test_rankings.py  test_roster.py  test_waiver.py
(+1 files in other folders)
