[project]
name = "fantasy-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fantraxapi>=1.0.1",
    "marimo>=0.19.11",
    "pandas>=3.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "selenium>=4.40.0",
    "textual>=2.0.0",
    "webdriver-manager>=4.0.2",
]

[project.scripts]
fantasy = "src.tui.app:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "pytest-textual-snapshot>=1.0.0",
]
